# BosstroveRevenge

./: .classpath  .gitignore  .gitmodules  .project  Cargo.toml  README.md  build.gradle  deny.toml  gradle.properties  pre-commit  rust-toolchain.toml  settings.gradle
.cargo/: config.toml
LlamaBuilder/: .classpath  .gitignore  .project  build.gradle
LlamaBuilder/src/main/java/ai/arcblroth/boss/: GameClassLoader.java  Llama.java  LlamaMain.java
LlamaBuilder/src/main/java/ai/arcblroth/boss/llama/: Llama.java  LlamaStaticDefaults.java  LlamaUtils.java  Main.java
LlamaBuilder/src/main/res/: main.fxml  stylesheet.css
bevy_zhack/: Cargo.toml  README.md
bevy_zhack/examples/: over-everything-else.rs
bevy_zhack/src/: lib.rs
bosstroves-revenge/: Cargo.toml  build.rs
bosstroves-revenge/assets/: .gitignore
bosstroves-revenge/assets/level/test/: w0l1-debugging-seas-reloaded.vox
bosstroves-revenge/src/: load.rs  main.rs  state.rs  util.rs
bosstroves-revenge/src/debug/: fps_mem_display.rs  memory_diagnostics.rs  mod.rs
bosstroves-revenge/src/level/: load.rs  mod.rs
bosstroves-revenge/src/ui/: hsv.rs  logo.rs  mod.rs  styles.rs
bosstroves-revenge/src/ui/transitions/: fade.rs  mod.rs
buildSrc/: build.gradle  gradle.properties
console/: build.gradle
console/src/main/java/ai/arcblroth/boss/: Relauncher.java
core/: build.gradle
core/src/main/aseprite/entity/polymorph/: lago.aseprite
core/src/main/java/ai/arcblroth/boss/: BosstrovesRevenge.java  Environment.java  Relauncher.java
core/src/main/java/ai/arcblroth/boss/engine/: Direction.java  (+8 more)
core/src/main/kotlin/ai/arcblroth/boss/: Backend.kt  BosstrovesRevenge.kt  Engine.kt
core/src/main/res/data/area/: boss.flavorText.barea  boss.roomChange.barea
core/src/main/res/data/entity/: xulpir.bent
core/src/main/res/data/level/: w0l1-debuggingSeas.blvl  w1l1-Lockdown.blvl
core/src/main/res/data/texture/entity/: xulpir.btex
core/src/main/res/data/tile/: boss.door.btile  boss.grass.btile  boss.lever.btile  boss.roomChange.btile  boss.stone.btile  class.board.btile  class.chair.btile  class.desk-with-computer.btile  class.wall.btile
core/src/main/res/data/tile/class/: class.desk.btile  class.door-e.btile  class.door-n.btile  class.door-s.btile  class.planks.btile  class.ramp.btile  class.wall-inside.btile  class.wall-outside-doorfix.btile  class.wall-outside.btile
core/src/main/res/font/: pressstar2p.btex
core/src/main/res/shader/: pixel.frag
core/src/main/voxel/room/: testing.vox
core/src/main/voxel/tile/: planks.vox
desktop/: build.gradle
desktop/graal/: jni-config.json  reflect-config.json  resource-config.json
doc/: EventSpecification.md  FormatSpecification-barea.md  FormatSpecification-bent.md  FormatSpecification-blvl.md  FormatSpecification-btex.md  FormatSpecification-btile.md
doc/schema/: barea.json  bent.json  blvl.json  btex.json  btile.json
ogt_vox_bindings/ogt_vox_sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.hpp
opengl/: build.gradle
opengl/src/main/java/ai/arcblroth/boss/: OpenGLMain.java
opengl/src/main/res/font/: LICENSE.txt
opengl/src/main/res/shader/: pixel.frag  pixel.vert
roast/: Cargo.toml  build.gradle  cbindgen.toml  rustfmt.toml
roast/shader/: scene.common.glsl  scene.frag.glsl  scene.vert.glsl
roast/src/: backend.rs  error.rs  ffi.rs  jni_classes.rs  jni_types.rs  jni_util.rs  lib.rs  lib_mesh.rs  lib_texture.rs  lib_ui.rs  logger.rs  mesh.rs  ogt_util.rs  renderer.rs  texture.rs  ui.rs
roast/src/ffi/: math.rs  util.rs
roast/src/renderer/: camera.rs  mesh.rs  scene.rs  shader.rs  texture.rs  types.rs  util.rs  vulkan.rs
src/main/java/: Main.java
src/main/java/ai/arcblroth/boss/: BosstroveRevenge.java  BosstrovesRevenge.java  ConsoleMain.java  Main.java  OpenGLMain.java  Relauncher.java
src/main/java/ai/arcblroth/boss/consoleio/: AnsiOutputRenderer.java  ArcAnsi.java  ConsoleInputEvent.java  ConsoleInputHandler.java  IOutputRenderer.java  OutputDefaults.java  OutputRenderer.java
src/main/java/ai/arcblroth/boss/crash/: CrashReportGenerator.java
src/main/java/ai/arcblroth/boss/engine/: IEngine.java  IHitboxed.java  IInteractable.java  Level.java  Position.java  Room.java  StepEvent.java
src/main/java/ai/arcblroth/boss/event/: AutoSubscribeClass.java  EventBus.java  EventBusSubscriber.java  EventPriority.java  IEvent.java  SubscribeEvent.java  SubscribingClassLoader.java  TestEvent.java
src/main/java/ai/arcblroth/boss/game/: WorldEngine.java  WorldRenderer.java
src/main/java/ai/arcblroth/boss/in/: KeyInputEvent.java  Keybind.java
src/main/java/ai/arcblroth/boss/io/: IOutputRenderer.java
src/main/java/ai/arcblroth/boss/key/: CharacterInputEvent.java  KeyMap.java  Keybind.java  KeybindRegistry.java
src/main/java/ai/arcblroth/boss/load/: AbstractIRegisterableLoader.java  ITileLoader.java  LoadEngine.java  LoadProcess.java  SubscribingClassLoader.java  TextureCache.java
src/main/java/ai/arcblroth/boss/register/: EntityRegistry.java  FloorTileBuilder.java  FloorTileRegistry.java  IRegistrable.java  IRegistry.java  LevelRegistry.java  WallTileBuilder.java  WallTileRegistry.java
src/main/java/ai/arcblroth/boss/render/: AnimatedTexture.java  Color.java  IRenderer.java  PixelAndTextGrid.java  PixelGrid.java  Texture.java
src/main/java/ai/arcblroth/boss/resource/: ExternalResource.java  InternalResource.java  PNGLoader.java  Resource.java  ResourceLoader.java  ResourceLocation.java  TextLoader.java  TextureCache.java  ZipResource.java
src/main/java/ai/arcblroth/boss/util/: Grid2D.java  OutputDefaults.java  PadUtils.java  StaticDefaults.java  TextureUtils.java  ThreadUtils.java  TriConsumer.java  TriFunction.java  Vector2D.java
src/main/res/data/entity/: xulpir.bent
src/main/res/data/level/: w0l1-debuggingSeas.blvl
src/main/res/data/texture/entity/: xulpir.btex
src/main/res/data/texture/tiles/: lever.btex
src/main/res/data/tile/: boss.column.btile  boss.sand.btile  boss.stone.btile  boss.tree.btile
src/main/res/shader/: pixel.frag  pixel.vert
src/test/java/ai/arcblroth/boss/test/: EventBusSubscriberTester.java
(+202 files in other folders)
