[package]
name = "bosstroves-revenge"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
license = "GPL-3.0-only"
version = "0.3.0"
edition = "2021"

[dependencies]
benimator = "3.0.0"
bevy_flycam = "0.7.0"
bevy_zhack = { version = "0.2.0", path = "../bevy_zhack" }
humantime = "2.1.0"
lazy_static = "1.4.0"
memory-stats = "1.0.0"
rand = "0.8.5"
uuid = "0.8.2"
winit = "0.26.1"

# TODO: remove when the uuid! macro lands into uuid proper
[dependencies.uuid-macro-internal]
version = "1.0.0-alpha.1"

[dependencies.bevy]
version = "0.7.0"

[dependencies.bevy_ase]
git = "https://github.com/Arc-blroth/bevy_ase"
rev = "61bd71669798bec098b7d0c780c031cfdc9b5daf"
version = "0.2.0"
features = ["benimator"]

[dependencies.bevy_vox_mesh]
git = "https://github.com/Arc-blroth/bevy_vox_mesh"
rev = "3aa81227a23dcae5e1d1c59b241e8ee04730ba53"
version = "0.3.0"

[build-dependencies]
path_macro = "1.0.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
zip = "0.6.0"

[features]
default = ["bevy_dyn"]
bevy_dyn = ["bevy/dynamic"]
