[package]
name = "bosstroves-revenge"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
license = "GPL-3.0-only"
version = "0.3.0"
edition = "2021"

[dependencies]
benimator = "4.0.0-rc.1"
bevy_flycam = "0.8.1"
humantime = "2.1.0"
lazy_static = "1.4.0"
memory-stats = "1.0.0"
rand = "0.8.5"
uuid = "0.8.2"
winit = "0.26.1"

# TODO: remove when the uuid! macro lands into uuid proper
[dependencies.uuid-macro-internal]
version = "1.0.0-alpha.1"

[dependencies.bevy]
version = "0.7.0"

[dependencies.bevy_ase]
git = "https://github.com/Arc-blroth/bevy_ase"
rev = "13eee8c043b8d2877bee0879c288a9a76a5487e3"
version = "0.2.0"
features = ["benimator"]

[dependencies.bevy_vox_mesh]
git = "https://github.com/Arc-blroth/bevy_vox_mesh"
rev = "ac2bb93d1bafed830f0349483c98ffa9683b6f66"
version = "0.3.0"

[build-dependencies]
path_macro = "1.0.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
zip = "0.6.0"

[features]
default = ["bevy_dyn"]
bevy_dyn = ["bevy/dynamic"]
