[package]
name = "roast"
version = "0.1.0"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = "1.0.42"
egui = { version = "0.13.0", default-features = false, features = ["single_threaded"] }
egui_winit_platform = { version = "0.9.0", default-features = false, features = ["clipboard"] }
glam = { version = "0.15.2" }
image = "0.23.14"
lazy_static = "1.4.0"
log = {version = "0.4.14", features = ["std"]}
ogt_vox_sys = { path = "../ogt_vox_bindings/ogt_vox_sys" }
thiserror = "1.0"
vulkano = "0.24.0"
vulkano-win = "0.24.0"
vulkano-shaders = "0.24.0"
winit = "0.25.0"

[dependencies.egui_vulkano]
git = "https://github.com/Arc-blroth/egui_vulkano"
rev = "8fa4685"
default-features = false
